<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cn.evendy.groupon.view.headerbar.HeaderBar
        android:id="@+id/main_featured_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@drawable/header_background"
        app:hTitle="@string/featured"
        app:rightIcon="@mipmap/icon_nav_saoyisao_normal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView style="@style/menu_item_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="110dp"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/everyday_push" />

            </LinearLayout>

            <ImageView style="@style/menu_item_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="70dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/featured_brand" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="3dp"
                    android:orientation="horizontal">

                    <include
                        layout="@layout/view_countdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" />
                </LinearLayout>


            </LinearLayout>

            <ImageView style="@style/menu_item_line" />

            <RelativeLayout
                android:id="@+id/main_feature_vip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp">

                <ImageView
                    android:id="@+id/vip_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/vip_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/vip_logo"
                    android:text="@string/main_featured_vip_item" />

                <ImageView style="@style/menu_item_arrows" />
            </RelativeLayout>

            <ImageView style="@style/menu_item_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="30dp"
                android:paddingLeft="10dp"
                android:text="@string/main_featured_list_title" />

            <ImageView style="@style/menu_item_line" />

            <ListView
                android:id="@+id/featured_all_groupon"
                android:layout_width="match_parent"
                android:layout_height="500dp" />

            <ImageView style="@style/menu_item_line" />

            <ImageView
                style="@style/menu_item_line"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/more_featured_brand"
                android:textSize="@dimen/level_two_textSize" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>