<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cn.evendy.groupon.view.headerbar.HeaderBar
        android:id="@+id/main_home_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        app:rightIcon="@mipmap/icon_nav_saoyisao_normal"
        android:background="@drawable/header_background" />

    <ScrollView
        style="@style/app_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView style="@style/menu_item_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="广告" />
            </LinearLayout>

            <ImageView style="@style/menu_item_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:orientation="vertical">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/home_style_menu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="菜单栏" />
            </LinearLayout>

            <ImageView style="@style/menu_item_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/featured_brand"
                        android:textSize="@dimen/level_one_textSize" />

                    <ImageView
                        android:id="@+id/home_featured_arrows"
                        style="@style/menu_item_arrows"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="8dp" />

                    <include
                        layout="@layout/view_countdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="3dp"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@id/home_featured_arrows" />

                </RelativeLayout>

                <cn.evendy.groupon.view.menubar.MenuBar
                    android:id="@+id/home_featured_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <ImageView style="@style/menu_item_line" />

            <cn.evendy.groupon.view.menubar.MenuBar
                app:menu_divider="@drawable/menu_divider"
                android:id="@+id/home_special_push_menu"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_weight="1" />

            <ImageView style="@style/menu_item_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/guess_you_like"
                        android:textSize="@dimen/level_one_textSize" />

                    <ImageView
                        android:id="@+id/guess_arrows"
                        style="@style/menu_item_arrows"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="3dp" />

                    <TextView
                        android:id="@+id/all_groupon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@id/guess_arrows"
                        android:text="@string/all_groupon"
                        android:textSize="@dimen/level_two_textSize" />
                </RelativeLayout>
            </LinearLayout>

            <ListView
                android:id="@+id/guess_like_list"
                android:layout_width="match_parent"
                android:layout_height="500dp" />

            <ImageView style="@style/menu_item_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/check_all_groupon"
                android:textSize="@dimen/level_two_textSize" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>